Use CMake to build the native binaries/libraries.
This simplifies the build.gradle file immensely and also transfers the
burden of having to maintain all the native compliation configuration
from custom gradle scripts to a well-maintained tool (CMake).